--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,32 +1,3 @@
-<script type="text/javascript">
-  function selectchange(id){
-    ids = id.split("-")
-    $.ajax({
-        url : "/api/users/enlace",
-        dataType : "json",    
-        data: {
-            id1: ids[0],
-            id2: ids[1],
-            tipo: ids[2]
-      },
-        success : function(json) {
-        },    
-
-        error : function(xhr, ajaxOptions, thrownError) {
-            alert(xhr.status+" "+url_root);
-            alert(thrownError);
-        }
-      });
-  };
-    $(document).ready(function(){ 
-      $( ".default" ).change(function() {
-        selectchange($(this).val());
-      });
-
-      
-    });
-</script>
-
 <%= link_to new_user_path, :class=>"btn btn-success pull-right" do%>
   <span class="glyphicon glyphicon-plus-sign"></span> 
   Nuevo Jugador
@@ -78,7 +49,40 @@
         <input type="text" placeholder="neighborhood" 
           class="form-control search" name="neighborhood"/>
       </th>
-      <th colspan="5"></th>
+      <th>
+        <select class="select_search search"  style="width:100%" 
+        name="sub_enlace_id">
+          <option value="0"></option>
+          <%@subenlace.each do |sbenlace|%>
+            <option value="<%= sbenlace.id %>"> 
+              <%= sbenlace.full_name %>
+            </option>
+          <%end%>
+        </select>
+      </th>
+      <th>
+        <select class="select_search search"  style="width:100%" 
+        name="enlace_id">
+          <option value="0"></option>
+          <%@enlace.each do |enlace|%>
+            <option value="<%= enlace.id %>"> 
+              <%= enlace.full_name %>
+            </option>
+          <%end%>
+        </select>
+      </th>
+      <th>
+        <select class="select_search search"  style="width:100%" 
+        name="coordinador_id">
+          <option value="0"></option>
+          <% @coordinador.each do |coor| %>
+            <option value="<%= coor.id %>"> 
+              <%= coor.full_name %>
+            </option>
+          <%end%>
+        </select>
+      </th>
+      <th colspan="2"></th>
     </tr>
     <tr>
       <th >
@@ -151,7 +155,11 @@
             <select class="select_class"  style="width:100%" data-catid="1">
               <option value="vacio"></option>
               <%@subenlace.each do |a|%>
-                <option value="<%=a.id%>" <%if user.subenlace_id == a.id%>selected<%end%> data-user_id = "<%=user.id%>" data-tipo = "1"><%=a.name%> <%=a.first_name%></option>
+                <option value="<%=a.id%>" 
+                  <%if user.subenlace_id == a.id%> selected <%end%> 
+                  data-user_id = "<%=user.id%>" data-tipo = "1">
+                  <%=a.full_name%>
+                </option>
               <%end%>
             </select>
           </p>
@@ -161,7 +169,11 @@
             <select class="select_class"  style="width:100%" data-catid="1">
               <option value="vacio"></option>
               <%@enlace.each do |a|%>
-                <option value="<%=a.id%>" <%if user.enlace_id == a.id%>selected<%end%> data-user_id = "<%=user.id%>" data-tipo = "2"><%=a.name%> <%=a.first_name%></option>
+                <option value="<%=a.id%>" 
+                  <%if user.enlace_id == a.id%> selected <%end%> 
+                  data-user_id = "<%=user.id%>" data-tipo = "2">
+                  <%=a.full_name%>
+                </option>
               <%end%>
             </select>
           </p>
@@ -171,7 +183,11 @@
             <select class="select_class"  style="width:100%" data-catid="1">
               <option value="vacio"></option>
               <%@coordinador.each do |a|%>
-                <option value="<%=a.id%>" <%if user.coordinador_id == a.id%>selected<%end%> data-user_id = "<%=user.id%>" data-tipo = "3"><%=a.name%> <%=a.first_name%></option>
+                <option value="<%=a.id%>" 
+                  <%if user.coordinador_id == a.id%> selected <%end%> 
+                  data-user_id = "<%=user.id%>" data-tipo = "3">
+                  <%=a.full_name%>
+                </option>
               <%end%>
             </select>
           </p>
