--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,7 @@
   <span class="glyphicon glyphicon-plus-sign"></span> 
   Nuevo Jugador
 <%end%>
+
 <!--
 <%= link_to downloads_path+"?role=#{params[:role]}", 
   :class=>"btn btn-info pull-right" do %>
@@ -42,47 +43,61 @@
           name="section"/>
       </th>
       <th>
-        <input type="text" placeholder="city" class="form-control search" 
-          name="city"/>
+        <!--<input type="text" placeholder="city" class="form-control search" 
+          name="city"/>-->
+           <select class="form-control search2 municipality" id="select_municipality" 
+        name="municipality_id">
+        <option value="-1"> </option>
+        <option value="0"> Otros </option>
+        <% @municipalities.each do |mun| %>
+          <option value="<%= mun.id %>"> <%= mun.name %></option>
+        <% end %>
+      </select> 
       </th>
       <th colspan="1">
         <input type="text" placeholder="neighborhood" 
           class="form-control search" name="neighborhood"/>
       </th>
-      <th>
-        <select class="select_search search"  style="width:100%" 
-        name="sub_enlace_id">
-          <option value="0"></option>
-          <%@subenlace.each do |sbenlace|%>
-            <option value="<%= sbenlace.id %>"> 
-              <%= sbenlace.full_name %>
-            </option>
-          <%end%>
-        </select>
-      </th>
-      <th>
-        <select class="select_search search"  style="width:100%" 
-        name="enlace_id">
-          <option value="0"></option>
-          <%@enlace.each do |enlace|%>
-            <option value="<%= enlace.id %>"> 
-              <%= enlace.full_name %>
-            </option>
-          <%end%>
-        </select>
-      </th>
-      <th>
-        <select class="select_search search"  style="width:100%" 
-        name="coordinador_id">
-          <option value="0"></option>
-          <% @coordinador.each do |coor| %>
-            <option value="<%= coor.id %>"> 
-              <%= coor.full_name %>
-            </option>
-          <%end%>
-        </select>
-      </th>
-      <th colspan="2"></th>
+      <%if params[:role]!="subenlace" && params[:role] != "enlace" && params[:role] != "coordinador"%>
+        <th>
+          <select class="select_search search"  style="width:100%" 
+          name="sub_enlace_id">
+            <option value="0"></option>
+            <%@subenlace.each do |sbenlace|%>
+              <option value="<%= sbenlace.id %>"> 
+                <%= sbenlace.full_name %>
+              </option>
+            <%end%>
+          </select>
+        </th>
+      <%end%>
+      <%if params[:role] != "enlace" && params[:role] != "coordinador"%>
+        <th>
+          <select class="select_search search"  style="width:100%" 
+          name="enlace_id">
+            <option value="0"></option>
+            <%@enlace.each do |enlace|%>
+              <option value="<%= enlace.id %>"> 
+                <%= enlace.full_name %>
+              </option>
+            <%end%>
+          </select>
+        </th>
+      <%end%>
+      <%if params[:role]!="coordinador"%>
+        <th>
+          <select class="select_search search"  style="width:100%" 
+          name="coordinador_id">
+            <option value="0"></option>
+            <% @coordinador.each do |coor| %>
+              <option value="<%= coor.id %>"> 
+                <%= coor.full_name %>
+              </option>
+            <%end%>
+          </select>
+        </th>
+      <%end%>
+      
     </tr>
     <tr>
       <th >
@@ -109,31 +124,36 @@
       <th>
         <p class="small">Colonia</p>
       </th>
-      <th>
-        <p class="small">Subenlace</p>
-      </th>
-      <th>
-        <p class="small">Enlace</p>
-      </th>
-      <th>
-        <p class="small">Coordinador</p>
-      </th>
-      <th colspan="2">
-      </th>
+      <%if params[:role]!="subenlace" && params[:role] != "enlace" && params[:role] != "coordinador"%>
+        <th>
+          <p class="small">Subenlace</p>
+        </th>
+      <%end%>
+      <%if params[:role] != "enlace" && params[:role] != "coordinador"%>
+        <th>
+          <p class="small">Enlace</p>
+        </th>
+      <%end%>
+      <%if params[:role]!="coordinador"%>
+        <th>
+          <p class="small">Coordinador</p>
+        </th>
+      <%end%>
+      
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td >
-          <p class="small"><%=user.name%></p>
+        <td id = "<%=user.id%>">
+          <p class="small"><%= link_to  user.name,(user_path user)+"?role=#{params[:role]}"%></p>
         </td>
         <td >
-          <p class="small"><%= user.first_name%></p>
+          <p class="small"><%= link_to  user.first_name,(user_path user)+"?role=#{params[:role]}"%></p>
         </td>
         <td >
-          <p class="small"><%= user.last_name %></p>
+          <p class="small"><%= link_to  user.last_name,(user_path user)+"?role=#{params[:role]}"%></p>
         </td>
         <td>
           <p class="small"><%= user.gender %></p>
@@ -150,65 +170,54 @@
         <td>
           <p class="small"><%= user.neighborhood %></p>
         </td>
-        <td>
-          <p class="small">
-            <select class="select_class"  style="width:100%" data-catid="1">
-              <option value="vacio"></option>
-              <%@subenlace.each do |a|%>
-                <option value="<%=a.id%>" 
-                  <%if user.subenlace_id == a.id%> selected <%end%> 
-                  data-user_id = "<%=user.id%>" data-tipo = "1">
-                  <%=a.full_name%>
-                </option>
-              <%end%>
-            </select>
-          </p>
-        </td>
-        <td>
-          <p class="small">
-            <select class="select_class"  style="width:100%" data-catid="1">
-              <option value="vacio"></option>
-              <%@enlace.each do |a|%>
-                <option value="<%=a.id%>" 
-                  <%if user.enlace_id == a.id%> selected <%end%> 
-                  data-user_id = "<%=user.id%>" data-tipo = "2">
-                  <%=a.full_name%>
-                </option>
-              <%end%>
-            </select>
-          </p>
-        </td>
-        <td>
-          <p class="small">
-            <select class="select_class"  style="width:100%" data-catid="1">
-              <option value="vacio"></option>
-              <%@coordinador.each do |a|%>
-                <option value="<%=a.id%>" 
-                  <%if user.coordinador_id == a.id%> selected <%end%> 
-                  data-user_id = "<%=user.id%>" data-tipo = "3">
-                  <%=a.full_name%>
-                </option>
-              <%end%>
-            </select>
-          </p>
-        </td>
-        <td class="center">
-            <% if @canedit %>
-              <%= link_to (user_path user)+"?role=#{params[:role]}", 
-                :class=> 'table-action' do%>
-                  <span class="glyphicon glyphicon-eye-open"></span>
-              <%end%>
-            <% end %>
+        <%if params[:role]!="subenlace" && params[:role] != "enlace" && params[:role] != "coordinador"%>
+          <td id="td-subenlace">
+            <p class="small">
+              <select class="select_class subenlace"  style="width:100%" data-catid="1">
+                <option value="vacio"></option>
+                <%@subenlace.each do |a|%>
+                  <option value="<%=a.id%>" 
+                    <%if user.subenlace_id == a.id%> selected <%end%> 
+                    data-user_id = "<%=user.id%>" data-tipo = "1">
+                    <%=a.full_name%>
+                  </option>
+                <%end%>
+              </select>
+            </p>
           </td>
-          <% if @canedit %>
-            <td class="center">
-              <%= link_to "/users/"+user.id.to_s, metdod: :delete, data: { 
-                  confirm: '¿Está seguro que desea eliminar?' } , 
-                :class=> 'table-action' do%>
-                <span class="glyphicon glyphicon-remove"></span>
-              <% end %>
-            </td>
-          <% end %>
+        <%end%>
+        <%if params[:role]!="enlace" && params[:role] != "coordinador"%>
+          <td id="td-enlace">
+            <p class="small">
+              <select class="select_class enlace"  style="width:100%" data-catid="1">
+                <option value="vacio"></option>
+                <%@enlace.each do |a|%>
+                  <option value="<%=a.id%>" <%if user.enlace_id == a.id%> selected <%end%> 
+                    data-user_id = "<%=user.id%>" data-tipo = "2">
+                    <%=a.full_name%>
+                  </option>
+                <%end%>
+              </select>
+            </p>
+          </td>
+        <%end%>
+        <%if params[:role]!="coordinador"%>
+          <td id="td-coordinador">
+            <p class="small">
+              <select class="select_class coordinador"  style="width:100%" data-catid="1">
+                <option value="vacio"></option>
+                <%@coordinador.each do |a|%>
+                  <option value="<%=a.id%>" 
+                    <%if user.coordinador_id == a.id%> selected <%end%> 
+                    data-user_id = "<%=user.id%>" data-tipo = "3">
+                    <%=a.full_name%>
+                  </option>
+                <%end%>
+              </select>
+            </p>
+          </td>
+        <%end%>
+        
       </tr>
     <% end %>
   </tbody>
