--- a/app/views/users/lista_nominal.html.erb
+++ b/app/views/users/lista_nominal.html.erb
@@ -99,6 +99,14 @@
           <th>
             <!-- <input type="text" placeholder="city" class="form-control search2" 
               name="city"/> -->
+              <select class="form-control search2 municipality" id="select_municipality" 
+        name="municipality_id">
+        <option value="-1"> </option>
+        <option value="0"> Otros </option>
+        <% @municipalities.each do |mun| %>
+          <option value="<%= mun.id %>"> <%= mun.name %></option>
+        <% end %>
+      </select> 
           </th>
           <th >
 
