--- a/app/views/users/lista_nominal.html.erb
+++ b/app/views/users/lista_nominal.html.erb
@@ -99,7 +99,7 @@
           <th>
             <!-- <input type="text" placeholder="city" class="form-control search2" 
               name="city"/> -->
-              <select class="form-control search2 municipality" id="select_municipality" 
+              <select class="form-control search2 municipality"  
         name="municipality_id">
         <option value="-1"> </option>
         <option value="0"> Otros </option>
