--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -45,7 +45,7 @@
       <th>
         <!--<input type="text" placeholder="city" class="form-control search" 
           name="city"/>-->
-           <select class="form-control search2 municipality" id="select_municipality2" 
+        <select class="form-control search search2 municipality" id="select_municipality2" 
         name="municipality_id">
         <option value="-1"> </option>
         <option value="0"> Otros </option>
