--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -17,6 +17,10 @@
   <div id="container4" class="col-sm-12">
   </div>
 </div>
+<div class="row">
+  <div id="container5" class="col-sm-12">
+  </div>
+</div>
 <hr />
 <div class="row">
   <div class="col-sm-12">
