--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,27 +19,27 @@
   <tdead>
     <tr>
       <th>
-        <input type="text" placeholder="name" class="form-control search" 
+        <input type="text" placeholder="Nombre" class="form-control search" 
           name="name"/>
       </th>
       <th>
-        <input type="text" placeholder="first_name" class="form-control search" 
+        <input type="text" placeholder="Primer apellido" class="form-control search" 
           name="first_name"/>
       </th>
       <th>
-        <input type="text" placeholder="last_name" class="form-control search" 
+        <input type="text" placeholder="Segundo apellido" class="form-control search" 
           name="last_name"/>
       </th>
       <th>
-        <input type="text" placeholder="gender" class="form-control search" 
+        <input type="text" placeholder="Género" class="form-control search" 
           name="gender"/>
       </th>
       <th>
-        <input type="text" placeholder="age" class="form-control search" 
+        <input type="text" placeholder="Edad" class="form-control search" 
           name="age"/>
       </th>
       <th>
-        <input type="text" placeholder="section" class="form-control search" 
+        <input type="text" placeholder="Seccion" class="form-control search" 
           name="section"/>
       </th>
       <th>
@@ -55,7 +55,7 @@
       </select> 
       </th>
       <th colspan="1">
-        <input type="text" placeholder="neighborhood" 
+        <input type="text" placeholder="Colonia" 
           class="form-control search" name="neighborhood"/>
       </th>
       <%if params[:role]!="subenlace" && params[:role] != "enlace" && params[:role] != "coordinador"%>
