--- a/app/views/users/lista_nominal.html.erb
+++ b/app/views/users/lista_nominal.html.erb
@@ -77,15 +77,15 @@
       <thead>
         <tr>
           <th>
-            <input type="text" placeholder="name" class="form-control search2" 
+            <input type="text" placeholder="Nombre" class="form-control search2" 
               name="name"/>
           </th>
           <th>
-            <input type="text" placeholder="first_name" class="form-control search2" 
+            <input type="text" placeholder="Primer Apellido" class="form-control search2" 
               name="first_name"/>
           </th>
           <th>
-            <input type="text" placeholder="last_name" class="form-control search2" 
+            <input type="text" placeholder="Segundo Apellido" class="form-control search2" 
               name="last_name"/>
           </th>
           <th>
@@ -93,7 +93,7 @@
               name="age"/> -->
           </th>
           <th>
-            <input type="text" placeholder="section" class="form-control search2" 
+            <input type="text" placeholder="Sección" class="form-control search2" 
               name="section"/>
           </th>
           <th>
