--- a/app/views/users/lista_nominal.html.erb
+++ b/app/views/users/lista_nominal.html.erb
@@ -48,7 +48,10 @@
 </div>
 <hr />
 <!--<table class="table table-hover table-bordered table-striped" id="users_table">-->
-
+<select>
+  <option>Polling 1</option>
+</select>
+<button>Generar Lista Nominal</button>
 <div class="table-responsive">
 <table class="table table-bordered table-striped table-hover" id="users_table">  
   <tdead>
