--- a/app/views/users/lista_nominal.html.erb
+++ b/app/views/users/lista_nominal.html.erb
@@ -14,7 +14,7 @@
     <div class="well well-sm">
       Municipio
       <hr>
-      <select class="form-control search2 filtro_dropdown" name="municipality_id">
+      <select class="form-control search2 filtro_dropdown" id="select_municipality2" name="municipality_id">
               <option value="-1"> </option>
               <option value="0"> Otros </option>
               <% @municipalities.each do |mun| %>
