--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -64,7 +64,7 @@
 						<dt> SubEnlace </dt>
 						<dd>
 							<% if !@user.subenlace_id.nil? && @user.subenlace_id != 0 %>
-						 		<%= link_to User.find(@user.subenlace_id).name, @user.get_subenlace, 
+						 		<%= link_to User.find(@user.subenlace_id).full_name, @user.get_subenlace, 
 							 		:target => '_blank' %>
 						 	<% else %> 
 							 	No tiene asignado subenlace
@@ -73,7 +73,7 @@
   					<dt> Enlace </dt>
   					<dd>
   						<%if !@user.enlace_id.nil? && @user.enlace_id != 0%> 
-	  						<%= link_to User.find(@user.enlace_id).name,@user.get_enlace, 
+	  						<%= link_to User.find(@user.enlace_id).full_name.name,@user.get_enlace, 
 	  						:target =>'_blank' %>
   						<% else %> 
   							No tiene asignado enlace
@@ -82,7 +82,7 @@
 						<dt> Coordinador </dt>
 						<dd>
 							<%if !@user.coordinador_id.nil? && @user.coordinador_id != 0 %> 
-								<%= link_to User.find(@user.coordinador_id).name, @user.get_coordinador,
+								<%= link_to User.find(@user.coordinador_id).full_name, @user.get_coordinador,
 								:target =>'_blank' %>
 							<% else %> 
 								No tiene asignado coordinador 
@@ -136,19 +136,30 @@
 	</div>
 </div>
 <hr />
-<div class="row">
-	<div class="col-md-12">
-		<div id="containerMapas" style="width:100%;height:380px;overflow:hidden;">
-		</div>
-	</div>
-</div>
-<hr />
 <div>
 	<div class="row">
 		<%if @subordinados && !@subordinados.empty?%>
-		<table class="table table-bordered table-striped table-hover" id="users_table">  
-	      <thead>
-	        <tr>
+			<div class="row">
+				<div class="col-md-6">
+					<%= form_tag import_users_path(params[:id]), multipart:true do %>
+			      <%= file_field_tag :file %>
+			      <%= hidden_field_tag :id,  params[:id] %>
+			      <%= hidden_field_tag :cuenta_empresa_id, params[:cuenta_empresa_id] %>
+			      <%= hidden_field_tag :month, params[:month]  %>
+			      <%= hidden_field_tag :year, params[:year]  %>
+			      <%= submit_tag "+Importar", class: "btn btn-small btn-primary" %>
+			    <% end %>
+				</div>
+				<div class="col-md-6">
+					<%= link_to 'Descargar', downloads_subordinados_path(:id => @user.id, 
+					:role => @user.role), class: "btn btn-success btn-block"%>
+				</div>
+			</div>
+  	<%end%>
+		<table class="table table-bordered table-striped table-hover"
+		 id="users_table" style="margin-top:10px;">  
+      <thead>
+        <tr>
 		      <th >
 		        <p class="small">Nombre</p>
 		      </th>
@@ -174,39 +185,45 @@
 		        <p class="small">Colonia</p>
 		      </th>		      
 		    </tr>
-	        </thead>
-	        <%@subordinados.each do |s|%>
-		        <tr>
-		            <td >
-		              <p class="small"><%=s.name%></p>
-		            </td>
-		            <td >
-		              <p class="small"><%= s.first_name%></p>
-		            </td>
-		            <td >
-		              <p class="small"><%= s.last_name %></p>
-		            </td>
-		            <td>
-		              <p class="small"><%= s.age %></p>
-		            </td>
-		            <td>
-		              <p class="small"><%= s.section.to_i %></p>
-		            </td>
-		            <td>
-		              <p class="small"><%= s.city %></p>
-		            </td>
-		            <td>
-		            	<p class="small"><%= s.city %></p>
-		            </td>
-		            <td>
-		            	<p class="small"><%= s.city %></p>
-		            </td>
-	            </tr>
-	        <%end%>
-    	</table>
-    	<%= link_to 'Descargar', downloads_subordinados_path(:id => @user.id, :role => @user.role), class: "btn btn-primary btn-large"%>
-    	<%end%>
-
+    	</thead>
+    	<tbody>
+        <% @subordinados.each do |s| %>
+	        <tr>
+            <td>
+              <p class="small"><%=s.name%></p>
+            </td>
+            <td>
+              <p class="small"><%= s.first_name%></p>
+            </td>
+            <td>
+              <p class="small"><%= s.last_name %></p>
+            </td>
+            <td>
+              <p class="small"><%= s.age %></p>
+            </td>
+            <td>
+              <p class="small"><%= s.section.to_i %></p>
+            </td>
+            <td>
+              <p class="small"><%= s.city %></p>
+            </td>
+            <td>
+            	<p class="small"><%= s.city %></p>
+            </td>
+            <td>
+            	<p class="small"><%= s.city %></p>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+  	</table>
+	</div>
+</div>
+<hr />
+<div class="row">
+	<div class="col-md-12">
+		<div id="containerMapas" style="width:100%;height:380px;overflow:hidden;">
+		</div>
 	</div>
 </div>
 <hr />
