--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -45,7 +45,7 @@
       <th>
         <!--<input type="text" placeholder="city" class="form-control search" 
           name="city"/>-->
-        <select class="form-control search filtro_dropdown municipality" id="select_municipality2" 
+        <select class="form-control search filtro_dropdown municipality" id="select_municipality" 
         name="municipality_id">
         <option value="-1"> </option>
         <option value="0"> Otros </option>
@@ -73,7 +73,7 @@
       <%end%>
       <%if params[:role] != "enlace" && params[:role] != "coordinador"%>
         <th>
-          <select class="form-control select_search filtro_dropdown search2"  style="width:100%" 
+          <select class="form-control select_search filtro_dropdown search"  style="width:100%" 
           name="enlace_id">
             <option value="0"></option>
             <%@enlace.each do |enlace|%>
@@ -87,7 +87,7 @@
       <%if params[:role]!="coordinador"%>
         <th>
 
-        <select class="form-control select_search filtro_dropdown search2"  style="width:100%" 
+        <select class="form-control select_search filtro_dropdown search"  style="width:100%" 
           name="coordinador_id">
             <option value="0"></option>
             <% @coordinador.each do |coor| %>
@@ -166,7 +166,7 @@
           <p class="small"><%= user.section.to_i %></p>
         </td>
         <td>
-          <p class="small"><%= user.city %></p>
+          <p class="small"><%= user.municipality.name if !user.municipality.nil? %></p>
         </td>
         <td>
           <p class="small"><%= user.neighborhood %></p>
