--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -120,7 +120,7 @@
 				<%= @user.neighborhood %>
 				
 				<dt>Municipio:</dt>
-				<%= @user.city %>
+				<%= @user.municipality.name if !@user.municipality_id.nil? %>
 			</dl>
 		</div>
 	</div>
@@ -155,68 +155,69 @@
 					:role => @user.role), class: "btn btn-success btn-block"%>
 				</div>
 			</div>
-  	<%end%>
-		<table class="table table-bordered table-striped table-hover"
-		 id="users_table" style="margin-top:10px;">  
-      <thead>
-        <tr>
-		      <th >
-		        <p class="small">Nombre</p>
-		      </th>
-		      <th >
-		        <p class="small">Paterno</p>
-		      </th>
-		      <th >
-		        <p class="small">Materno</p>
-		      </th>
-		      <th>
-		        <p class="small">Sexo</p>
-		      </th>
-		      <th>
-		        <p class="small">Edad</p>
-		      </th>
-		      <th>
-		        <p class="small">Sección</p>
-		      </th>
-		      <th>
-		        <p class="small">Municipio</p>
-		      </th>
-		      <th>
-		        <p class="small">Colonia</p>
-		      </th>		      
-		    </tr>
-    	</thead>
-    	<tbody>
-        <% @subordinados.each do |s| %>
+  	
+			<table class="table table-bordered table-striped table-hover"
+			 id="users_table" style="margin-top:10px;">  
+	      <thead>
 	        <tr>
-            <td>
-              <p class="small"><%=s.name%></p>
-            </td>
-            <td>
-              <p class="small"><%= s.first_name%></p>
-            </td>
-            <td>
-              <p class="small"><%= s.last_name %></p>
-            </td>
-            <td>
-              <p class="small"><%= s.age %></p>
-            </td>
-            <td>
-              <p class="small"><%= s.section.to_i %></p>
-            </td>
-            <td>
-              <p class="small"><%= s.city %></p>
-            </td>
-            <td>
-            	<p class="small"><%= s.city %></p>
-            </td>
-            <td>
-            	<p class="small"><%= s.city %></p>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-  	</table>
+			      <th >
+			        <p class="small">Nombre</p>
+			      </th>
+			      <th >
+			        <p class="small">Paterno</p>
+			      </th>
+			      <th >
+			        <p class="small">Materno</p>
+			      </th>
+			      <th>
+			        <p class="small">Sexo</p>
+			      </th>
+			      <th>
+			        <p class="small">Edad</p>
+			      </th>
+			      <th>
+			        <p class="small">Sección</p>
+			      </th>
+			      <th>
+			        <p class="small">Municipio</p>
+			      </th>
+			      <th>
+			        <p class="small">Colonia</p>
+			      </th>		      
+			    </tr>
+	    	</thead>
+	    	<tbody>
+	        <% @subordinados.each do |s| %>
+		        <tr>
+	            <td>
+	              <p class="small"><%=s.name%></p>
+	            </td>
+	            <td>
+	              <p class="small"><%= s.first_name%></p>
+	            </td>
+	            <td>
+	              <p class="small"><%= s.last_name %></p>
+	            </td>
+	            <td>
+	              <p class="small"><%= s.age %></p>
+	            </td>
+	            <td>
+	              <p class="small"><%= s.section.to_i %></p>
+	            </td>
+	            <td>
+	              <p class="small"><%= s.city %></p>
+	            </td>
+	            <td>
+	            	<p class="small"><%= s.city %></p>
+	            </td>
+	            <td>
+	            	<p class="small"><%= s.city %></p>
+	            </td>
+	          </tr>
+	        <% end %>
+	      </tbody>
+	  	</table>
+  	<%end%>
 	</div>
 </div>
 <hr />
